[package]
name = "cache_loader_async"
description = "A thread safe loading cache with async loader functions based on tokio"
repository = "https://github.com/ZeroTwo-Bot/cache-loader-async-rs"
version = "0.0.2"
authors = ["Alexander Becker <bytealex@zerotwo.bot>", "Spencer Sharkey <spencer@sf-n.com>"]
edition = "2018"
keywords = ["cache", "async"]
categories = ["asynchronous", "caching"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3.0", features = ["full"] }
futures = "0.3.14"

# Optional feature based dependencies
lru = { version = "0.6.5", optional = true }

[features]
default = []
lru-cache = ["lru"]