[package]
name = "cache_loader_async"
description = "A thread safe loading cache with async loader functions based on tokio"
repository = "https://github.com/ZeroTwo-Bot/cache-loader-async-rs"
version = "0.1.2"
authors = ["Alexander Becker <bytealex@zerotwo.bot>", "Spencer Sharkey <spencer@sf-n.com>"]
edition = "2018"
keywords = ["cache", "async"]
categories = ["asynchronous", "caching"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "~1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3.14"
thiserror = "1.0"

# Optional feature based dependencies
lru = { version = "0.6.5", optional = true }

[dev-dependencies]
cache_loader_async_macros = { path = "./cache-loader-async-macros" }

[features]
default = []
lru-cache = ["lru"]
ttl-cache = []